update get suspicious log
